--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,4 +1,13 @@
 plugins:
-  plugin_name_enabled:
+  desoc_badges_enabled:
     default: true
     client: true
+  desoc_infura_id:
+    client: true
+    default: ''
+  desoc_json_rpc:
+    client: true
+    default: 'https://goerli.infura.io/v3/1b91f66482d64c7e900913c7763227f2'
+    placeholder:
+      key: "desoc_json_rpc.key_placeholder"
+      value: "desoc_json_rpc.value_placehoder"
