--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,3 +17,9 @@ plugins:
     placeholder:
       key: "desoc_json_rpc.key_placeholder"
       value: "desoc_json_rpc.value_placehoder"
+  desoc_mainnet_json_rpc:
+    client: true
+    default: 'https://mainnet.infura.io/v3/1b91f66482d64c7e900913c7763227f2'
+    placeholder:
+      key: "desoc_mainnet_json_rpc.key_placeholder"
+      value: "desoc_mainnet_json_rpc.value_placehoder"
