--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discourse-plugin-name",
+  "name": "discourse-desoc-plugin",
   "version": "0.0.1",
   "repository": "TODO",
   "author": "Discourse",
